Running some test to fix some of the layout shifts

--- a/gen/css/main.css
+++ b/gen/css/main.css
@@ -1,1 +1,1 @@
-label[data-v-f9f6c3d1]{margin-right:10px}input[data-v-f9f6c3d1]{margin-bottom:10px}
+label[data-v-ac8b20cf]{margin-right:10px}input[data-v-ac8b20cf]{margin-bottom:10px}
